# libpbrpc

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindProtobufExt.cmake
proto/: CMakeLists.txt  pbrpc.proto
src/: CMakeLists.txt  ControllerRPC.hh  MethodRPC.hh  ServiceManager.cc  ServiceManager.hh  ServiceRPC.hh
src/pbrpc/: ControllerRPC.hh  ServiceManager.cc  ServiceManager.hh  ServiceRPC.hh  config.h
